added takephoto and addphoto

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
             <div data-role="content" id="summaryPanel">
 				<input type="button" value="Add Photo" id="addPhotoButton" />
+				<input type="button" value="Take Photo" id="takePhotoButton" />
 				
 				<ul id="photosList" data-role="listview" data-inset="true"/>
 				</ul>
